--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,12 +38,12 @@ jobs:
           git config user.email "github-actions@github.com"
           VERSION=$(git describe --tags --abbrev=0)
           echo "Creating release branch for version $VERSION"
-          git checkout -b "release:$VERSION"
+          git checkout -b "release/$VERSION"
           echo "Updating version.go to $VERSION"
           sed -i "s/const Version = \".*\"/const Version = \"$VERSION\"/" ./version/version.go
           git add ./version/version.go
           git commit -m "chore: update version to $VERSION"
-          git push origin "release:$VERSION"
+          git push origin "release/$VERSION"
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v1
