--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,23 +32,20 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
-      - name: Create release branch and Update version.go
-        run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
-          VERSION=$(git describe --tags --abbrev=0)
-          echo "Creating release branch for version $VERSION"
-          git checkout -b "release/$VERSION"
-          echo "Updating version.go to $VERSION"
-          sed -i "s/var Version = \".*\"/var Version = \"$VERSION\"/" ./version/version.go
-          git add ./version/version.go
-          git commit -m "chore: update version to $VERSION"
-          git push origin "release/$VERSION"
-
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v1
+        uses: goreleaser/goreleaser-action@v6
         with:
           version: latest
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Commit and push version.go to new branch
+        run: |
+          VERSION=$(git describe --tags --abbrev=0)
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git checkout -b "release/${VERSION}"
+          git add version/version.go
+          git commit -m "chore: update version to ${VERSION}" || echo "No changes to commit"
+          git push origin "release/${VERSION}"
